// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstUtils.utils call with sound 1`] = `
Object {
  "Message": "Command output follows",
  "Output": "",
  "Response": "Success",
}
`;

exports[`AstUtils.utils get list of a endpoints 1`] = `
Object {
  "Message": "Command output follows",
  "Output": "Disclaimer: this command is for informational purposes only.
It does not indicate anything about your configuration.
ID TYPE  NAME         FORMAT           DESCRIPTION
------------------------------------------------------------------------------------------------
31 image png          png              (PNG Image)
6 audio g726         g726             (G.726 RFC3551)
4 audio alaw         alaw             (G.711 a-law)
2 audio g723         g723             (G.723.1)
20 audio speex        speex            (SpeeX)
21 audio speex        speex16          (SpeeX 16khz)
22 audio speex        speex32          (SpeeX 32khz)
24 audio g722         g722             (G722)
25 audio siren7       siren7           (ITU G.722.1 (Siren7, licensed from Polycom))
32 video h261         h261             (H.261 video)
33 video h263         h263             (H.263 video)
8 audio adpcm        adpcm            (Dialogic ADPCM)
43 audio silk         silk8            (SILK Codec (8 KHz))
44 audio silk         silk12           (SILK Codec (12 KHz))
45 audio silk         silk16           (SILK Codec (16 KHz))
46 audio silk         silk24           (SILK Codec (24 KHz))
28 audio g719         g719             (ITU G.719)
34 video h263p        h263p            (H.263+ video)
35 video h264         h264             (H.264 video)
19 audio g729         g729             (G.729A)
9 audio slin         slin             (16 bit Signed Linear PCM)
10 audio slin         slin12           (16 bit Signed Linear PCM (12kHz))
11 audio slin         slin16           (16 bit Signed Linear PCM (16kHz))
12 audio slin         slin24           (16 bit Signed Linear PCM (24kHz))
13 audio slin         slin32           (16 bit Signed Linear PCM (32kHz))
14 audio slin         slin44           (16 bit Signed Linear PCM (44kHz))
15 audio slin         slin48           (16 bit Signed Linear PCM (48kHz))
16 audio slin         slin96           (16 bit Signed Linear PCM (96kHz))
17 audio slin         slin192          (16 bit Signed Linear PCM (192kHz))
3 audio ulaw         ulaw             (G.711 u-law)
18 audio lpc10        lpc10            (LPC10)
27 audio testlaw      testlaw          (G.711 test-law)
42 audio none         none             (<Null> codec)
41 image t38          t38              (T.38 UDPTL Fax)
38 video vp9          vp9              (VP9 video)
37 video vp8          vp8              (VP8 video)
5 audio gsm          gsm              (GSM)
36 video mpeg4        mpeg4            (MPEG4 video)
23 audio ilbc         ilbc             (iLBC)
39 text  red          red              (T.140 Realtime Text with redundancy)
40 text  t140         t140             (Passthrough T.140 Realtime Text)
29 audio opus         opus             (Opus Codec)
30 image jpeg         jpeg             (JPEG image)
7 audio g726aal2     g726aal2         (G.726 AAL2)
1 audio codec2       codec2           (Codec 2)
26 audio siren14      siren14          (ITU G.722.1 Annex C, (Siren14, licensed from Polycom))",
  "Response": "Success",
}
`;

exports[`AstUtils.utils reload dialplan 1`] = `
Object {
  "Message": "Command output follows",
  "Output": "Dialplan reloaded.",
  "Response": "Success",
}
`;
